# narwhal

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  narwhal.example.toml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: narwhal-content.md  narwhal-duplication.md  narwhal-geo.md  narwhal-links.md  narwhal-local.md  narwhal-performance.md  narwhal-schema.md  narwhal-sitemap.md  narwhal-sxo.md  narwhal-technical.md
assets/: README.md  make-brand-logo.py  make-dark-logo.py
commands/: narwhal.md
demo/: README.md  demo.tape  make_demo_gif.py
docs/: CONFIG.md  README.md  ROADMAP.md  STATUS.md
docs/samples/: sample-report.html
docs/tuning/: README.md
docs/tuning/2026-07-round-1/: RESULTS.md
docs/tuning/2026-07-round-1/after/: allbirds.json  hn.json  jvns.json  pydocs.json  stripe.json  theverge.json  vercel.json  wikipedia.json
docs/tuning/2026-07-round-1/before/: allbirds.json  hn.json  jvns.json  pydocs.json  stripe.json  theverge.json  vercel.json  wikipedia.json
docs/tuning/2026-07-round-2/: RESULTS.md
docs/tuning/2026-07-round-2/after/: allbirds-home.json  allbirds-product.json  apple.json  hn.json  jvns-article.json  jvns-home.json  lemonde.json  openskyelabs.json  pydocs-article.json  pydocs-hub.json  recipe.json  stripe.json  theverge-home.json  vercel.json  wikipedia.json
docs/tuning/2026-07-round-2/before/: allbirds-home.json  allbirds-product.json  apple.json  hn.json  jvns-article.json  jvns-home.json  lemonde.json  openskyelabs.json  pydocs-article.json  pydocs-hub.json  recipe.json  stripe.json  theverge-home.json  vercel.json  wikipedia.json
skills/seo-scan/: SKILL.md  requirements.txt
skills/seo-scan/references/: content-eeat.md  geo-llmo.md  schema.md  technical-seo.md
skills/seo-scan/scripts/: __init__.py  __main__.py  audit.py  audit_content.py  audit_geo.py  audit_schema.py  audit_technical.py  brief.py  cli.py  compare.py  crawl_site.py  crux.py  diff_scan.py  generate_llms.py  generate_schema.py  gsc.py  mcp_server.py  psi.py  render_report.py  scan.py  validate_sitemap.py
skills/seo-scan/scripts/lib/: __init__.py  brand.py  config.py  content_quality.py  env.py  hreflang.py  htmlx.py  http.py  images.py  jsdiff.py  links.py  report.py  robots.py  simhash.py  sitegraph.py  sitemap.py  text.py
skills/seo-scan/tests/: render_smoke.py  test_smoke.py
